<resources>
    <string name="ok">确定</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="save_other">其他位置</string>
    <string name="next">下一步</string>
    <string name="no_data">暂时没有数据</string>
    <string name="more">更多</string>
    <string name="save_path">选择存储路径</string>
    <string name="mc">脉冲波形</string>
    <string name="setting">设置</string>
    <string name="history_data">历史数据</string>
    <string name="filter_data">选择数据</string>
    <string name="menu_finish">完成</string>
    <string name="check_photo">查看照片</string>
    <string name="take_photo">拍照</string>
    <string name="choose_photo">选择照片</string>
    <string name="check_net">内容加载失败，请检查网络</string>
    <string name="reload">重新加载</string>
    <string name="no_data_str">暂无数据</string>
    <string name="save">保存</string>

    <string name="band_detection_1">全通</string>
    <string name="band_detection_2">高通</string>
    <string name="band_detection_3">低通</string>

    <string name="fz_unit_1">mV</string>
    <string name="fz_unit_2">mV</string>

    <string name="phase_model_1">内同步</string>
    <string name="phase_model_2">无线同步</string>
    <string name="phase_model_3">智能同步</string>

    <string name="empty_directory_hint">当前文件夹为空</string>

    <string name="type_directory">文件夹</string>
    <string name="type_document">文件</string>
    <string name="type_uhf">特高频</string>
    <string name="type_ac">超声波</string>
    <string name="type_tev">暂态地电压</string>
    <string name="type_hf">高频</string>
    <string name="action_close">关闭</string>
    <string name="action_choose">选择当前文件夹</string>

    <string name="menu_str_new_dir">新建文件夹</string>
    <string name="menu_str_edit_dir">编辑文件夹</string>
    <string name="menu_str_cut">剪切</string>
    <string name="menu_str_paste">粘贴</string>
    <string name="menu_str_delete">删除</string>
    <string name="menu_str_share">共享</string>

    <string name="file_type_all">所有类型</string>
    <string name="file_type_ac">超声波(AE)</string>
    <string name="file_type_aa">超声波(AA)</string>
    <string name="file_type_tev">暂态地电压(TEV)</string>
    <string name="file_type_hf">高频(HF)</string>
    <string name="file_type_uhf">特高频(UHF)</string>
    <string name="channel_name">设备电量低提示</string>
    <string name="channel_description">设备电量低提示</string>

    <string name="hf_state_1">传感器连接故障</string>
    <string name="hf_state_2">通道1放电处于警戒状态</string>
    <string name="hf_state_3">放电处于过高状态</string>
    <string name="hf_state_4">放电处于告警状态</string>

    <string name="empty_text"/>
    <string name="aa_state_1">传感器连接故障</string>
    <string name="aa_state_2">通道1放电处于警戒状态</string>
    <string name="aa_state_3">放电处于过高状态</string>
    <string name="aa_state_4">放电处于告警状态</string>

    <string name="fd_state_0"/>
    <string name="fd_state_1">尖刺放电</string>
    <string name="fd_state_2">悬浮放电</string>
    <string name="fd_state_3">沿面放电</string>
    <string name="fd_state_4">内部放电</string>
    <string name="fd_state_5">微粒</string>
    <string name="fd_state_6">噪声(通讯)</string>
    <string name="fd_state_7">其它干扰</string>
    <string name="save_location">保存位置:</string>
    <string name="save_log">保存Log：</string>

</resources>