<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_close"
        android:title="@string/action_close"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_new_dir"
        android:title="@string/menu_str_new_dir"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_edit_dir"
        android:title="@string/menu_str_edit_dir"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_cut"
        android:title="@string/menu_str_cut"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_paste"
        android:title="@string/menu_str_paste"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_str_delete"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_str_share"
        app:showAsAction="collapseActionView" />
</menu>