<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#E6333333"
    android:orientation="vertical">

    <TextView
        android:id="@+id/savePath"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/save_path"
        android:textColor="#ffffffff"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#4DFFFFFF" />

    <TextView
        android:id="@+id/mc"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/mc"
        android:textColor="#ffffffff"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#4DFFFFFF" />

    <TextView
        android:id="@+id/setting"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="#ffffffff"
        android:textSize="14sp" />


</LinearLayout>