<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/checkPhotoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/checkPhoto"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/check_photo"
            android:textColor="#333333"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_divide" />

    </LinearLayout>

    <TextView
        android:id="@+id/takePhoto"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/take_photo"
        android:textColor="#333333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_divide" />

    <TextView
        android:id="@+id/choosePhoto"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/choose_photo"
        android:textColor="#333333"
        android:textSize="16sp" />
</LinearLayout>